deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mr-web
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mr-web
  template:
    metadata:
      labels:
        run: mr-web
    spec:
      containers:
      - name: mr-web
        image: kenlai212/mr-web
        imagePullPolicy: Always
        ports:
        - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: mr-web
  labels:
    run: mr-web
spec:
  type: NodePort
  selector:
    run: mr-web
  ports:
    - protocol: TCP
      name: mr-web
      port: 4200
      targetPort: 4200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mr-web-bff
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mr-web-bff
  template:
    metadata:
      labels:
        run: mr-web-bff
    spec:
      containers:
      - name: mr-web-bff
        image: kenlai212/mr-web-bff
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mr-web-bff
  labels:
    run: mr-web-bff
spec:
  type: NodePort
  selector:
    run: mr-web-bff
  ports:
    - protocol: TCP
      name: mr-web-bff
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-api
spec:
  replicas: 1
  selector:
    matchLabels:
      run: tasks-api
  template:
    metadata:
      labels:
        run: tasks-api
    spec:
      containers:
      - name: tasks-api
        image: kenlai212/tasks-api
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: tasks-api
  labels:
    run: tasks-api
spec:
  type: NodePort
  selector:
    run: tasks-api
  ports:
    - protocol: TCP
      name: tasks-api
      port: 3001
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guitar-tabs-api
spec:
  replicas: 1
  selector:
    matchLabels:
      run: guitar-tabs-api
  template:
    metadata:
      labels:
        run: guitar-tabs-api
    spec:
      containers:
      - name: guitar-tabs-api
        image: kenlai212/guitar-tabs-api
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: guitar-tabs-api
  labels:
    run: guitar-tabs-api
spec:
  type: NodePort
  selector:
    run: guitar-tabs-api
  ports:
    - protocol: TCP
      name: guitar-tabs-api
      port: 3002
      targetPort: 3002
