ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mandarin-robotics
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mandarin-robotics.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                  name: mr-web
                  port:
                    number: 4200
          - path: /mr-web-bff
            pathType: Prefix
            backend:
              service:
                  name: mr-web-bff
                  port:
                    number: 3000
