localhost_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mandarin-robotics 
spec:
  rules:
    - http:
        paths:
          - path: /mr-web
            pathType: Prefix
            backend:
              service:
                  name: mr-web
                  port:
                    number: 4200
          - path: /mr-web-bff
            pathType: Prefix
            backend:
              service:
                  name: mr-web-bff
                  port:
                    number: 3000
